# gnome-todo

./: .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac
data/: Makefile.am  org.gnome.Todo.desktop.in.in  org.gnome.todo.gschema.xml  todo.gresource.xml
data/gtk/: menus.ui
data/theme/: Adwaita.css
data/ui/: edit-pane.ui  list-view.ui  notification.ui  storage-dialog.ui  storage-popover.ui  storage-selector.ui  task-row.ui  window.ui
po/: LINGUAS  POTFILES.in  el.po  es.po  he.po  pl.po  sk.po  sl.po
src/: Makefile.am  gtd-application.c  gtd-arrow-frame.c  gtd-edit-pane.c  gtd-initial-setup-window.c  gtd-list-view.c  gtd-manager.c  gtd-manager.h  gtd-storage-popover.c  gtd-storage-selector.c  gtd-storage.c  gtd-storage.h  gtd-task-list-item.c  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list.c  gtd-task-row.c  gtd-task.c  gtd-types.h  gtd-window.c
src/notification/: gtd-notification-widget.c  gtd-notification-widget.h  gtd-notification.c  gtd-notification.h
src/storage/: gtd-storage-dialog.c  gtd-storage-dialog.h  gtd-storage-popover.c  gtd-storage-selector.c  gtd-storage-selector.h
